--- a/public/dashboards/all_components.json
+++ b/public/dashboards/all_components.json
@@ -4319,6 +4319,72 @@
 			],
 			"tags": [],
 			"contributors": ["tuic"]
+		},
+		"321": {
+			"id": 321,
+			"index": "traffic_accident",
+			"map_config": [
+				{
+					"heatmap": {
+						"filter": "type",
+						"zoom": 16.5
+					},
+					"index": "traffic_accident_location_view",
+					"paint": {
+						"circle-color": [
+							"match",
+							["get", "type"],
+							"1",
+							"#CA0020",
+							"2",
+							"#ff996d",
+							"3",
+							"#f8c3ac",
+							"#ccc"
+						]
+					},
+					"property": [
+						{
+							"key": "location",
+							"name": "位置"
+						},
+						{
+							"key": "type",
+							"name": "處理別"
+						},
+						{
+							"key": "occur_time",
+							"name": "時間"
+						}
+					],
+					"type": "circle",
+					"size": null,
+					"icon": "heatmap",
+					"title": "交通事故統計"
+				}
+			],
+			"chart_config": {
+				"color": ["#CA0020", "#ff996d", "#f8c3ac"],
+				"types": ["DonutChart", "BarChart"],
+				"unit": "件",
+				"map_filter": ["type", ["1", "2", "3"]]
+			},
+			"history_data": true,
+			"source": "警察局",
+			"time_from": "2023-01-31T14:01:00Z",
+			"time_to": null,
+			"update_freq": null,
+			"update_freq_unit": null,
+			"name": "111年肇事逃逸",
+			"short_desc": "顯示三至四個月前的交通事故統計及熱力圖",
+			"long_desc": "顯示三至四個月前的交通事故統計及熱力圖，資料來源為台北市交通局內部資料，每月更新。",
+			"use_case": "透過交通事故的統計資料與熱力圖的呈現，我們能更直觀地了解台北市3~4個月前的交通事故情況，並尋找可能的高風險地區。",
+			"links": [
+				"https://data.taipei/dataset/detail?id=0554bac7-cbc2-4ef3-a55e-0aad3dd4ee1d",
+				"https://data.taipei/dataset/detail?id=2f238b4f-1b27-4085-93e9-d684ef0e2735"
+			],
+			"tags": [],
+			"contributors": ["tuic"]
 		}
 	}
 }
