--- a/public/dashboards/all_components.json
+++ b/public/dashboards/all_components.json
@@ -5022,30 +5022,7 @@
 		"300": {
 			"id": 300,
 			"index": "111區域發生車禍數量",
-			"map_config": [
-				{
-					"index": "heal_aed",
-					"paint": {
-						"circle-color": "#A25FAD"
-					},
-					"property": [
-						{
-							"key": "name",
-							"name": "地點"
-						},
-						{
-							"key": "dist",
-							"name": "行政區"
-						},
-						{
-							"key": "addr",
-							"name": "地址"
-						}
-					],
-					"type": "circle",
-					"title": "AED分布"
-				}
-			],
+		
 			"chart_config": {
 				"types": [
 					"TaoyuanChart",
@@ -5084,7 +5061,7 @@
 			"long_desc": "顯示111區域發生車禍數量，資料來源為台北市衛生局公開資料，每月更新。",
 			"use_case": "透過台北市衛生局公開資料，我們能了解當前AED設置地點分布情況，提供在緊急時尋找AED進行急救的便利。",
 			"links": [
-				"https://data.taipei/dataset/detail?id=cd050577-115f-4299-b37a-012ff490a632"
+				"https://roadsafety.tw/Dashboard/Custom?type=%E7%B5%B1%E8%A8%88%E5%BF%AB%E8%A6%BD"
 			],
 			"tags": [],
 			"contributors": [
@@ -5094,49 +5071,7 @@
 		"320": {
 			"id": 320,
 			"index": "traffic_accident",
-			"map_config": [
-				{
-					"heatmap": {
-						"filter": "type",
-						"zoom": 16.5
-					},
-					"index": "traffic_accident_location_view",
-					"paint": {
-						"circle-color": [
-							"match",
-							[
-								"get",
-								"type"
-							],
-							"1",
-							"#CA0020",
-							"2",
-							"#ff996d",
-							"3",
-							"#f8c3ac",
-							"#ccc"
-						]
-					},
-					"property": [
-						{
-							"key": "location",
-							"name": "位置"
-						},
-						{
-							"key": "type",
-							"name": "處理別"
-						},
-						{
-							"key": "occur_time",
-							"name": "時間"
-						}
-					],
-					"type": "circle",
-					"size": null,
-					"icon": "heatmap",
-					"title": "交通事故統計"
-				}
-			],
+
 			"chart_config": {
 				"color": [
 					"#c77dff",
@@ -5158,9 +5093,8 @@
 					]
 				]
 			},
-			"history_data": true,
 			"source": "警察局",
-			"time_from": "2023-01-31T14:01:00Z",
+			"time_from": "2021-12-31T14:01:00Z",
 			"time_to": null,
 			"update_freq": null,
 			"update_freq_unit": null,
@@ -5169,8 +5103,8 @@
 			"long_desc": "顯示三至四個月前的交通事故統計及熱力圖，資料來源為台北市交通局內部資料，每月更新。",
 			"use_case": "透過交通事故的統計資料與熱力圖的呈現，我們能更直觀地了解台北市3~4個月前的交通事故情況，並尋找可能的高風險地區。",
 			"links": [
-				"https://data.taipei/dataset/detail?id=0554bac7-cbc2-4ef3-a55e-0aad3dd4ee1d",
-				"https://data.taipei/dataset/detail?id=2f238b4f-1b27-4085-93e9-d684ef0e2735"
+				"https://roadsafety.tw/Dashboard/Custom?type=%E7%B5%B1%E8%A8%88%E5%BF%AB%E8%A6%BD"
+
 			],
 			"tags": [],
 			"contributors": [
@@ -5180,49 +5114,7 @@
 		"321": {
 			"id": 321,
 			"index": "traffic_accident",
-			"map_config": [
-				{
-					"heatmap": {
-						"filter": "type",
-						"zoom": 16.5
-					},
-					"index": "traffic_accident_location_view",
-					"paint": {
-						"circle-color": [
-							"match",
-							[
-								"get",
-								"type"
-							],
-							"1",
-							"#CA0020",
-							"2",
-							"#ff996d",
-							"3",
-							"#f8c3ac",
-							"#ccc"
-						]
-					},
-					"property": [
-						{
-							"key": "location",
-							"name": "位置"
-						},
-						{
-							"key": "type",
-							"name": "處理別"
-						},
-						{
-							"key": "occur_time",
-							"name": "時間"
-						}
-					],
-					"type": "circle",
-					"size": null,
-					"icon": "heatmap",
-					"title": "交通事故統計"
-				}
-			],
+			
 			"chart_config": {
 				"color": [
 					"#c77dff",
@@ -5242,9 +5134,8 @@
 					]
 				]
 			},
-			"history_data": true,
 			"source": "警察局",
-			"time_from": "2023-01-31T14:01:00Z",
+			"time_from": "2022-21-31T14:01:00Z",
 			"time_to": null,
 			"update_freq": null,
 			"update_freq_unit": null,
@@ -5253,8 +5144,7 @@
 			"long_desc": "顯示三至四個月前的交通事故統計及熱力圖，資料來源為台北市交通局內部資料，每月更新。",
 			"use_case": "透過交通事故的統計資料與熱力圖的呈現，我們能更直觀地了解台北市3~4個月前的交通事故情況，並尋找可能的高風險地區。",
 			"links": [
-				"https://data.taipei/dataset/detail?id=0554bac7-cbc2-4ef3-a55e-0aad3dd4ee1d",
-				"https://data.taipei/dataset/detail?id=2f238b4f-1b27-4085-93e9-d684ef0e2735"
+				"https://roadsafety.tw/Dashboard/Custom?type=%E7%B5%B1%E8%A8%88%E5%BF%AB%E8%A6%BD"
 			],
 			"tags": [],
 			"contributors": [
@@ -5264,49 +5154,7 @@
 		"322": {
 			"id": 322,
 			"index": "traffic_accident",
-			"map_config": [
-				{
-					"heatmap": {
-						"filter": "type",
-						"zoom": 16.5
-					},
-					"index": "traffic_accident_location_view",
-					"paint": {
-						"circle-color": [
-							"match",
-							[
-								"get",
-								"type"
-							],
-							"1",
-							"#CA0020",
-							"2",
-							"#ff996d",
-							"3",
-							"#f8c3ac",
-							"#ccc"
-						]
-					},
-					"property": [
-						{
-							"key": "location",
-							"name": "位置"
-						},
-						{
-							"key": "type",
-							"name": "處理別"
-						},
-						{
-							"key": "occur_time",
-							"name": "時間"
-						}
-					],
-					"type": "circle",
-					"size": null,
-					"icon": "heatmap",
-					"title": "交通事故統計"
-				}
-			],
+
 			"chart_config": {
 				"color": [
 					"#CA0020",
@@ -5327,7 +5175,6 @@
 					]
 				]
 			},
-			"history_data": true,
 			"source": "警察局",
 			"time_from": "2023-01-31T14:01:00Z",
 			"time_to": null,
@@ -5349,49 +5196,7 @@
 		"323": {
 			"id": 323,
 			"index": "traffic_accident",
-			"map_config": [
-				{
-					"heatmap": {
-						"filter": "type",
-						"zoom": 16.5
-					},
-					"index": "traffic_accident_location_view",
-					"paint": {
-						"circle-color": [
-							"match",
-							[
-								"get",
-								"type"
-							],
-							"1",
-							"#CA0020",
-							"2",
-							"#ff996d",
-							"3",
-							"#f8c3ac",
-							"#ccc"
-						]
-					},
-					"property": [
-						{
-							"key": "location",
-							"name": "位置"
-						},
-						{
-							"key": "type",
-							"name": "處理別"
-						},
-						{
-							"key": "occur_time",
-							"name": "時間"
-						}
-					],
-					"type": "circle",
-					"size": null,
-					"icon": "heatmap",
-					"title": "交通事故統計"
-				}
-			],
+
 			"chart_config": {
 				"color": [
 					"#CA0020",
@@ -5412,7 +5217,6 @@
 					]
 				]
 			},
-			"history_data": true,
 			"source": "警察局",
 			"time_from": "2023-01-31T14:01:00Z",
 			"time_to": null,
@@ -5434,49 +5238,7 @@
 		"324": {
 			"id": 324,
 			"index": "traffic_accident",
-			"map_config": [
-				{
-					"heatmap": {
-						"filter": "type",
-						"zoom": 16.5
-					},
-					"index": "traffic_accident_location_view",
-					"paint": {
-						"circle-color": [
-							"match",
-							[
-								"get",
-								"type"
-							],
-							"1",
-							"#CA0020",
-							"2",
-							"#ff996d",
-							"3",
-							"#f8c3ac",
-							"#ccc"
-						]
-					},
-					"property": [
-						{
-							"key": "location",
-							"name": "位置"
-						},
-						{
-							"key": "type",
-							"name": "處理別"
-						},
-						{
-							"key": "occur_time",
-							"name": "時間"
-						}
-					],
-					"type": "circle",
-					"size": null,
-					"icon": "heatmap",
-					"title": "交通事故統計"
-				}
-			],
+
 			"chart_config": {
 				"color": [
 					"#1E90FF",
@@ -5497,7 +5259,6 @@
 					]
 				]
 			},
-			"history_data": true,
 			"source": "警察局",
 			"time_from": "2023-01-31T14:01:00Z",
 			"time_to": null,
@@ -5519,49 +5280,7 @@
 		"325": {
 			"id": 325,
 			"index": "traffic_accident",
-			"map_config": [
-				{
-					"heatmap": {
-						"filter": "type",
-						"zoom": 16.5
-					},
-					"index": "traffic_accident_location_view",
-					"paint": {
-						"circle-color": [
-							"match",
-							[
-								"get",
-								"type"
-							],
-							"1",
-							"#CA0020",
-							"2",
-							"#ff996d",
-							"3",
-							"#f8c3ac",
-							"#ccc"
-						]
-					},
-					"property": [
-						{
-							"key": "location",
-							"name": "位置"
-						},
-						{
-							"key": "type",
-							"name": "處理別"
-						},
-						{
-							"key": "occur_time",
-							"name": "時間"
-						}
-					],
-					"type": "circle",
-					"size": null,
-					"icon": "heatmap",
-					"title": "交通事故統計"
-				}
-			],
+
 			"chart_config": {
 				"color": [
 					"#1E90FF",
@@ -5582,7 +5301,6 @@
 					]
 				]
 			},
-			"history_data": true,
 			"source": "警察局",
 			"time_from": "2023-01-31T14:01:00Z",
 			"time_to": null,
@@ -5604,49 +5322,7 @@
 		"326": {
 			"id": 326,
 			"index": "traffic_accident",
-			"map_config": [
-				{
-					"heatmap": {
-						"filter": "type",
-						"zoom": 16.5
-					},
-					"index": "traffic_accident_location_view",
-					"paint": {
-						"circle-color": [
-							"match",
-							[
-								"get",
-								"type"
-							],
-							"1",
-							"#CA0020",
-							"2",
-							"#ff996d",
-							"3",
-							"#f8c3ac",
-							"#ccc"
-						]
-					},
-					"property": [
-						{
-							"key": "location",
-							"name": "位置"
-						},
-						{
-							"key": "type",
-							"name": "處理別"
-						},
-						{
-							"key": "occur_time",
-							"name": "時間"
-						}
-					],
-					"type": "circle",
-					"size": null,
-					"icon": "heatmap",
-					"title": "交通事故統計"
-				}
-			],
+
 			"chart_config": {
 				"color": [
 					"#6B8E23",
@@ -5667,7 +5343,6 @@
 					]
 				]
 			},
-			"history_data": true,
 			"source": "警察局",
 			"time_from": "2023-01-31T14:01:00Z",
 			"time_to": null,
@@ -5689,49 +5364,7 @@
 		"327": {
 			"id": 327,
 			"index": "traffic_accident",
-			"map_config": [
-				{
-					"heatmap": {
-						"filter": "type",
-						"zoom": 16.5
-					},
-					"index": "traffic_accident_location_view",
-					"paint": {
-						"circle-color": [
-							"match",
-							[
-								"get",
-								"type"
-							],
-							"1",
-							"#CA0020",
-							"2",
-							"#ff996d",
-							"3",
-							"#f8c3ac",
-							"#ccc"
-						]
-					},
-					"property": [
-						{
-							"key": "location",
-							"name": "位置"
-						},
-						{
-							"key": "type",
-							"name": "處理別"
-						},
-						{
-							"key": "occur_time",
-							"name": "時間"
-						}
-					],
-					"type": "circle",
-					"size": null,
-					"icon": "heatmap",
-					"title": "交通事故統計"
-				}
-			],
+
 			"chart_config": {
 				"color": [
 					"#6B8E23",
@@ -5752,7 +5385,6 @@
 					]
 				]
 			},
-			"history_data": true,
 			"source": "警察局",
 			"time_from": "2023-01-31T14:01:00Z",
 			"time_to": null,
@@ -5774,49 +5406,7 @@
 		"328": {
 			"id": 328,
 			"index": "traffic_accident",
-			"map_config": [
-				{
-					"heatmap": {
-						"filter": "type",
-						"zoom": 16.5
-					},
-					"index": "traffic_accident_location_view",
-					"paint": {
-						"circle-color": [
-							"match",
-							[
-								"get",
-								"type"
-							],
-							"1",
-							"#CA0020",
-							"2",
-							"#ff996d",
-							"3",
-							"#f8c3ac",
-							"#ccc"
-						]
-					},
-					"property": [
-						{
-							"key": "location",
-							"name": "位置"
-						},
-						{
-							"key": "type",
-							"name": "處理別"
-						},
-						{
-							"key": "occur_time",
-							"name": "時間"
-						}
-					],
-					"type": "circle",
-					"size": null,
-					"icon": "heatmap",
-					"title": "交通事故統計"
-				}
-			],
+
 			"chart_config": {
 				"color": [
 					"#FFA500",
@@ -5837,7 +5427,6 @@
 					]
 				]
 			},
-			"history_data": true,
 			"source": "警察局",
 			"time_from": "2023-01-31T14:01:00Z",
 			"time_to": null,
@@ -5859,49 +5448,7 @@
 		"329": {
 			"id": 329,
 			"index": "traffic_accident",
-			"map_config": [
-				{
-					"heatmap": {
-						"filter": "type",
-						"zoom": 16.5
-					},
-					"index": "traffic_accident_location_view",
-					"paint": {
-						"circle-color": [
-							"match",
-							[
-								"get",
-								"type"
-							],
-							"1",
-							"#CA0020",
-							"2",
-							"#ff996d",
-							"3",
-							"#f8c3ac",
-							"#ccc"
-						]
-					},
-					"property": [
-						{
-							"key": "location",
-							"name": "位置"
-						},
-						{
-							"key": "type",
-							"name": "處理別"
-						},
-						{
-							"key": "occur_time",
-							"name": "時間"
-						}
-					],
-					"type": "circle",
-					"size": null,
-					"icon": "heatmap",
-					"title": "交通事故統計"
-				}
-			],
+
 			"chart_config": {
 				"color": [
 					"#FFA500",
@@ -5922,7 +5469,6 @@
 					]
 				]
 			},
-			"history_data": true,
 			"source": "警察局",
 			"time_from": "2023-01-31T14:01:00Z",
 			"time_to": null,
@@ -5944,30 +5490,7 @@
 		"301": {
 			"id": 301,
 			"index": "110區域發生車禍數量",
-			"map_config": [
-				{
-					"index": "heal_aed",
-					"paint": {
-						"circle-color": "#A25FAD"
-					},
-					"property": [
-						{
-							"key": "name",
-							"name": "地點"
-						},
-						{
-							"key": "dist",
-							"name": "行政區"
-						},
-						{
-							"key": "addr",
-							"name": "地址"
-						}
-					],
-					"type": "circle",
-					"title": "AED分布"
-				}
-			],
+			
 			"chart_config": {
 				"types": [
 					"TaoyuanChart",
@@ -5997,7 +5520,7 @@
 				]
 			},
 			"name": "110區域發生車禍數量",
-			"source": "衛生局",
+			"source": "警察局",
 			"time_from": null,
 			"time_to": null,
 			"update_freq": null,
@@ -6006,7 +5529,7 @@
 			"long_desc": "顯示當前AED設置地點，資料來源為台北市衛生局公開資料，每月更新。",
 			"use_case": "透過台北市衛生局公開資料，我們能了解當前AED設置地點分布情況，提供在緊急時尋找AED進行急救的便利。",
 			"links": [
-				"https://data.taipei/dataset/detail?id=cd050577-115f-4299-b37a-012ff490a632"
+				"https://roadsafety.tw/Dashboard/Custom?type=%E7%B5%B1%E8%A8%88%E5%BF%AB%E8%A6%BD"
 			],
 			"tags": [],
 			"contributors": [
@@ -6416,18 +5939,17 @@
 				
 			},
 			
-			"name": "110肇事原因",
-			"source": "衛生局",
-			"history_data": true,
+			"name": "110年肇事原因",
+			"source": "警察局",
 			"history_data_color": ["#C8D3D5", "#A4B8C4", "#6E8387"],
-			"time_from": "1971-01-01",
+			"time_from": "2121-01-01",
 			"time_to": "2021-12-31" ,
-			"update_freq": "1",
-			"update_freq_unit": "year",
-			"short_desc": "顯示臺北市新生兒、嬰兒及孕產婦死亡率的統計資訊",
-			"long_desc": "顯示臺北市新生兒、嬰兒及孕產婦死亡率的統計資訊，資料來源為衛生局資料。",
-			"use_case": "瞭解臺北市新生兒、嬰兒及孕產婦死亡率的統計資訊，讓大家看得出來新生兒、嬰兒的死亡率是不斷在下降的(可見台灣醫療在進步)、產婦的死亡率會有各種原因而導致數據起起伏伏。",
-			"links": null,
+			"update_freq": null,
+			"update_freq_unit": null,
+			"short_desc": "顯示桃園市110年五大肇事原因的統計資訊",
+			"long_desc": "顯示桃園市110年五大肇事原因的統計資訊，資料來源為交通部資料。",
+			"use_case": "瞭解桃園市110年五大肇事原因的統計資訊，讓大家看得出110年五種肇事星期一至星期日不同肇事原因的比較。",
+			"links": ["https://roadsafety.tw/AccAgeI26CauseOrder?type=%E8%82%87%E5%9B%A0%E5%88%86%E6%9E%90"],
 			"tags": [],
 			"contributors": ["tuic"]
 		},
@@ -6443,18 +5965,17 @@
 				
 			},
 			
-			"name": "111肇事原因",
-			"source": "衛生局",
-			"history_data": true,
+			"name": "111年肇事原因",
+			"source": "警察局",
 			"history_data_color": ["#C8D3D5", "#A4B8C4", "#6E8387"],
-			"time_from": "1971-01-01",
-			"time_to": "2021-12-31" ,
-			"update_freq": "1",
-			"update_freq_unit": "year",
-			"short_desc": "顯示臺北市新生兒、嬰兒及孕產婦死亡率的統計資訊",
-			"long_desc": "顯示臺北市新生兒、嬰兒及孕產婦死亡率的統計資訊，資料來源為衛生局資料。",
-			"use_case": "瞭解臺北市新生兒、嬰兒及孕產婦死亡率的統計資訊，讓大家看得出來新生兒、嬰兒的死亡率是不斷在下降的(可見台灣醫療在進步)、產婦的死亡率會有各種原因而導致數據起起伏伏。",
-			"links": null,
+			"time_from": "2022-01-01",
+			"time_to": "2022-12-31" ,
+			"update_freq": null,
+			"update_freq_unit": null,
+			"short_desc": "顯示桃園市110年五大肇事原因的統計資訊",
+			"long_desc": "顯示桃園市110年五大肇事原因的統計資訊，資料來源為交通部資料。",
+			"use_case": "瞭解桃園市110年五大肇事原因的統計資訊，讓大家看得出110年五種肇事星期一至星期日不同肇事原因的比較。",
+			"links": ["https://roadsafety.tw/AccAgeI26CauseOrder?type=%E8%82%87%E5%9B%A0%E5%88%86%E6%9E%90"],
 			"tags": [],
 			"contributors": ["tuic"]
 		},
@@ -6527,13 +6048,13 @@
 			"source": "警察局",
 			"time_from": "2012-01-01T23:59:59+08:00",
 			"time_to": "2022-12-31T23:59:59+08:00",
-			"update_freq": 1,
-			"update_freq_unit": "month",
+			"update_freq": null,
+			"update_freq_unit": null,
 			"short_desc": "顯示近兩年每月的刑案統計資訊",
 			"long_desc": "顯示近兩年每月的刑案統計資訊，資料來源為台北市主計處開放資料，每月更新。",
 			"use_case": "藉由掌握台北市刑事案件近2年的統計資訊，我們可以瞭解案件的增減趨勢及相關特徵，有助於制定更有效的治安策略。",
 			"links": [
-				"https://data.taipei/dataset/detail?id=dc7e246a-a88e-42f8-8cd6-9739209af774"
+				"https://roadsafety.tw/Dashboard/Custom?type=%E7%B5%B1%E8%A8%88%E5%BF%AB%E8%A6%BD"
 			],
 			"tags": [],
 			"contributors": [
