--- a/public/dashboards/all_components.json
+++ b/public/dashboards/all_components.json
@@ -5945,7 +5945,7 @@
 			"update_freq": null,
 			"update_freq_unit": null,
 			"short_desc": "顯示桃園市110年五大肇事原因的統計資訊",
-			"long_desc": "顯示桃園市110年五大肇事原因的統計資訊，資料來源為交通部資料。",
+			"long_desc": "顯示桃園市110年五大肇事原因的統計資訊，資料來源為道安資訊查詢網公開資料。",
 			"use_case": "瞭解桃園市110年五大肇事原因的統計資訊，讓大家看得出110年五種肇事星期一至星期日不同肇事原因的比較。",
 			"links": ["https://roadsafety.tw/AccAgeI26CauseOrder?type=%E8%82%87%E5%9B%A0%E5%88%86%E6%9E%90"],
 			"tags": [],
@@ -5971,7 +5971,7 @@
 			"update_freq": null,
 			"update_freq_unit": null,
 			"short_desc": "顯示桃園市111年五大肇事原因的統計資訊",
-			"long_desc": "顯示桃園市111年五大肇事原因的統計資訊，資料來源為交通部資料。",
+			"long_desc": "顯示桃園市111年五大肇事原因的統計資訊，資料來源為道安資訊查詢網公開資料。",
 			"use_case": "瞭解桃園市111年五大肇事原因的統計資訊，讓大家看得出111年五種肇事星期一至星期日不同肇事原因的比較。",
 			"links": ["https://roadsafety.tw/AccAgeI26CauseOrder?type=%E8%82%87%E5%9B%A0%E5%88%86%E6%9E%90"],
 			"tags": [],
@@ -5980,50 +5980,49 @@
 		"304": {
 			"id": 304,
 			"index": "testing",
-			"history_data": false,
 			"map_config": null,
 			"chart_config": {
-				"color": ["#E06666", "#00A9E0"],
-				"types": ["ColumnLineChart", "TimelineSeparateChart"],
-				"unit": "件"
+				"color": ["lightskyblue"],
+				"types": ["ColumnwithRotatedLabels","BarChart"],
+				
+
+				"unit": "次"
 			},
-			"name": "110",
+			"name": "110年天氣與道路",
 			"source": "警察局",
-			"time_from": "2023-01-01T23:59:59+08:00",
-			"time_to": "2023-05-01T23:59:59+08:00",
-			"update_freq": 1,
-			"update_freq_unit": "month",
-			"short_desc": "顯示近兩年每月的刑案統計資訊",
-			"long_desc": "顯示近兩年每月的刑案統計資訊，資料來源為台北市主計處開放資料，每月更新。",
-			"use_case": "藉由掌握台北市刑事案件近2年的統計資訊，我們可以瞭解案件的增減趨勢及相關特徵，有助於制定更有效的治安策略。",
-			"links": [
-				"https://data.taipei/dataset/detail?id=dc7e246a-a88e-42f8-8cd6-9739209af774"
-			],
+			"history_data_color": ["#C8D3D5", "#A4B8C4", "#6E8387"],
+			"time_from": "2021-01-01",
+			"time_to": "2021-12-31" ,
+			"update_freq": null,
+			"update_freq_unit": null,
+			"short_desc": "顯示110年天氣與道路發生車禍次數的統計資訊",
+			"long_desc": "顯示110年天氣與道路發生車禍次數的統計資訊，資料來源為道安資訊查詢網公開資料。",
+			"use_case": "瞭解110年天氣與道路發生車禍次數的統計資訊，讓大家注意天氣與不同道路的關聯性，那些天氣需使用交通工具須注意。",
+			"links": ["https://roadsafety.tw/AccAgeI26CauseOrder?type=%E8%82%87%E5%9B%A0%E5%88%86%E6%9E%90"],
 			"tags": [],
 			"contributors": ["tuic"]
 		},
 		"305": {
 			"id": 305,
-			"index": "testing",
-			"history_data": false,
+			"index": "dead",
 			"map_config": null,
 			"chart_config": {
-				"color": ["#E06666", "#00A9E0"],
-				"types": ["ColumnLineChart", "TimelineSeparateChart"],
-				"unit": "件"
+				"color": ["lightskyblue"],
+				"types": ["ColumnwithRotatedLabels","BarChart"],
+
+				"unit": "次"
 			},
-			"name": "110",
+			"name": "111年天氣與道路",
 			"source": "警察局",
-			"time_from": "2023-01-01T23:59:59+08:00",
-			"time_to": "2023-05-01T23:59:59+08:00",
-			"update_freq": 1,
-			"update_freq_unit": "month",
-			"short_desc": "顯示近兩年每月的刑案統計資訊",
-			"long_desc": "顯示近兩年每月的刑案統計資訊，資料來源為台北市主計處開放資料，每月更新。",
-			"use_case": "藉由掌握台北市刑事案件近2年的統計資訊，我們可以瞭解案件的增減趨勢及相關特徵，有助於制定更有效的治安策略。",
-			"links": [
-				"https://data.taipei/dataset/detail?id=dc7e246a-a88e-42f8-8cd6-9739209af774"
-			],
+			"history_data_color": ["#C8D3D5", "#A4B8C4", "#6E8387"],
+			"time_from": "2022-01-01",
+			"time_to": "2022-12-31" ,
+			"update_freq": null,
+			"update_freq_unit": null,
+			"short_desc": "顯示111年天氣與道路發生車禍次數的統計資訊",
+			"long_desc": "顯示111年天氣與道路發生車禍次數的統計資訊，資料來源為道安資訊查詢網公開資料。",
+			"use_case": "瞭解111年天氣與道路發生車禍次數的統計資訊，讓大家注意天氣與不同道路的關聯性，那些天氣需使用交通工具須注意。",
+			"links": ["https://roadsafety.tw/AccAgeI26CauseOrder?type=%E8%82%87%E5%9B%A0%E5%88%86%E6%9E%90"],
 			"tags": [],
 			"contributors": ["tuic"]
 		},
@@ -6042,15 +6041,15 @@
 				],
 				"unit": "件"
 			},
-			"name": "績效",
+			"name": "101~111死傷人數",
 			"source": "警察局",
 			"time_from": "2012-01-01T23:59:59+08:00",
 			"time_to": "2022-12-31T23:59:59+08:00",
 			"update_freq": null,
 			"update_freq_unit": null,
-			"short_desc": "顯示近兩年每月的刑案統計資訊",
-			"long_desc": "顯示近兩年每月的刑案統計資訊，資料來源為台北市主計處開放資料，每月更新。",
-			"use_case": "藉由掌握台北市刑事案件近2年的統計資訊，我們可以瞭解案件的增減趨勢及相關特徵，有助於制定更有效的治安策略。",
+			"short_desc": "顯示101~111死傷的人數統計資訊",
+			"long_desc": "顯示101~111死傷的人數統計資訊，資料來源為道安資訊查詢網公開資料。",
+			"use_case": "藉由101~111死傷的人數統計資訊，我們可以瞭解每年死傷人數的起伏，做為績效的判斷。",
 			"links": [
 				"https://roadsafety.tw/Dashboard/Custom?type=%E7%B5%B1%E8%A8%88%E5%BF%AB%E8%A6%BD"
 			],
